# drone

./: CMakeLists.txt  Makefile  copy_to_share.sh  flight_controller.elf
src/: config.h  confing.h  flight_controller.c  mpu6050.c  mpu6050.h  timer.c  timer.h  utils.c  utils.h
src/communication/i2c/: i2c.c  i2c.h
src/communication/serial/: serial_communication.c  serial_communication.h
